checar imagenes y referencias

--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -1,16 +1,20 @@
-@misc{@,
-   author = "Wikipedia",
-   title = "Email --- {W}ikipedia{,} The Free Encyclopedia",
-   year = "2015",
-   note = {\url{http://en.wikipedia.org/wiki/Email}}
+
+
+@misc{Bellare,
+   author = {M. Bellare, S. Keelveedhi y T. Ristenpart},
+   title = "Dupless: Server-aided encryption for deduplicated storage.",
+   year = "2013:429",
+   publisher = {IACR Cryptology ePrint Archive},
  }
 
- @book{stinson,
-  author    = {Douglas R. Stinson},
-  title     = {Cryptography Theory and Practice},
-  publisher = {Chapman \& Hall/CRC},
-  year      = {2006},
-  edition	= {3a}
+ @book{Keelveedhi,
+  author    = { M. Bellare, S. Keelveedhi, and T. Ristenpart.},
+  title     = {Message-locked encryption and secure deduplication.},
+  publisher = {EUROCRYPT},
+  volume    = {7881},
+  pages     = {296–312},
+  year      = {2013},
+
 }
 
 @book{modes,
@@ -27,7 +31,7 @@
                Yehuda Lindell},
   title     = {Introduction to Modern Cryptography: Principles
 and Protocols},
-  publisher = {Chapman \& Hall/CRC},
+  publisher = {IACR Cryptology ePrint Archive},
   year      = {2007},
   isbn      = {978-1584885511}
 }
