--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -1,14 +1,14 @@
 
 
 @misc{Bellare,
-   author = {M. Bellare, S. Keelveedhi y T. Ristenpart},
+   author = {Bellare, Keelveedhi, Ristenpart},
    title = "Dupless: Server-aided encryption for deduplicated storage.",
    year = "2013:429",
    publisher = {IACR Cryptology ePrint Archive},
  }
 
  @book{Keelveedhi,
-  author    = { M. Bellare, S. Keelveedhi, and T. Ristenpart.},
+  author    = {Bellare, Keelveedhi, Ristenpart.},
   title     = {Message-locked encryption and secure deduplication.},
   publisher = {EUROCRYPT},
   volume    = {7881},
@@ -128,6 +128,7 @@ and Protocols},
 }
 
 @misc{sime,
+    author = {s/a},
     title = {Cifrado simetrico},
     howpublished = {Guía de Gnu Privacy Guard},
     year = {2015},
