--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -16,7 +16,7 @@
   year      = {2013},
 }
 
-@misc{Aguillon,
+@misc{cripto,
    author = {Aguillón Martínez Erika},
    title = "Fundamentos de Criptografía.",
    year = "2012",
@@ -24,7 +24,7 @@
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-de-criptografia}}
  }
 
-@misc{Aguillon2,
+@misc{servicios,
    author = {Aguillón Martínez Erika},
    title = "Fundamentos de Criptografía.",
    year = "2012",
@@ -32,7 +32,21 @@
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/13-servicios-y-mecanismos-de-seguridad/131-servicios-de-seguridad}}
  }
 
+@misc{norepudio,
+   author = {López López Erika},
+   title = "Fundamentos de Seguridad Informática.",
+   year = "2012",
+    howpublished = {Universidad Nacional Autónoma de México},
+   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/seguridad/ServNoRepudio.php}}
+ }
 
+@misc{ataques,
+   author = {Aguillón Martínez Erika},
+   title = "Fundamentos de Seguridad Informática.",
+   year = "2012",
+    howpublished = {Universidad Nacional Autónoma de México},
+   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/14-ataques/142-ataques-a-los-metodos-de-cifrado}}
+ }
 
 @book{modes,
  author = {Stallings, William},
