--- a/TT-2016-B045/archivosTex/preliminares.tex
+++ b/TT-2016-B045/archivosTex/preliminares.tex
@@ -137,9 +137,7 @@ La permutación es un tipo especial de sustitución en el que los bits de un blo
 
 La sustitución es el reemplazo de un bloque de $n$ bits por otro bloque de $n$ bits en un espacio de 
 $2^{k}$~\cite{bloc}. Los cifradores por bloques mas usados son AES (Advanced Encryption Standard, por sus 
-siglas en ingl\'es) y DES (Data Encryption Standard, por sus siglas en ingl\'es). \\ \\ 
-
-http://www.uv.es/sto/articulos/BEI-2003-04/criptologia.html
+siglas en ingl\'es) y DES (Data Encryption Standard, por sus siglas en ingl\'es). ~\cite{bloques}\\ \\ 
 
 Los cifradores por bloques pueden ser representados como se ve en la figura ~\ref{fig:1-2-5}.
 
