--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -48,6 +48,15 @@
    note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/14-ataques/142-ataques-a-los-metodos-de-cifrado}}
  }
 
+@article{bloques,
+  author    = {Talens Oliag Sergio},
+  title     = {Introducción a la criptología},
+  journal   = {InfoCentre{UV}},
+  year      = {2003},
+  url       = {http://www.uv.es/sto/articulos/BEI-2003-04/criptologia.html}
+}
+
+
 @book{modes,
  author = {Stallings, William},
  title = {Cryptography and Network Security: Principles and Practice},
