--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -56,6 +56,22 @@
   url       = {http://www.uv.es/sto/articulos/BEI-2003-04/criptologia.html}
 }
 
+@misc{rsa,
+   author = {s/a},
+   title = "RSA",
+    howpublished = {Herramientas WEB para la enseñanza de Protocolos de Comunicación},
+   note = {\url{http://neo.lcc.uma.es/evirtual/cdd/tutorial/presentacion/rsa.html}}
+ }
+
+@mastersthesis{ciegas,
+ author = {García Zamora Claudia Patricia},
+ title = "Diseño y Desarrollo de un Sistema para Elecciones
+Electrónicas Seguras (SELES)
+.",
+ school = {Centro de Investigación y de Estudios Avanzados
+del Instituto Politécnico Nacional},
+ year = "2005"
+}
 
 @book{modes,
  author = {Stallings, William},
