--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -1,5 +1,3 @@
-
-
 @misc{Bellare,
    author = {Bellare, Keelveedhi, Ristenpart},
    title = "Dupless: Server-aided encryption for deduplicated storage.",
@@ -16,8 +14,71 @@
   year      = {2013},
 }
 
+@misc{popa,
+   author = {HP, POPA},
+   title = "Estadísticas que todos deberían conocer sobre cloud computing",
+   year = "2016",
+   note = {\url{http://www.popa.hn/index.php/es/soluciones/96-otras-noticias/152-20-
+estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
+ }
+
+@misc{microsoft,
+   author = {Microsoft},
+   title = "Data Deduplication Overview",
+   year = "2015",
+    howpublished = {Biblioteca TechNet},
+   note = {\url{https://technet.microsoft.com/enus/library/hh831602(v=ws.11).aspx}}
+ }
+
+@misc{fundamentos,
+   author = {López Barrientos Jaquelina},
+   title = "Fundamentos de Criptografía.",
+   year = "2012",
+    howpublished = {Universidad Nacional Autónoma de México},
+   note = {\url{http://redyseguridad.fi-p.unam.mx/proyectos/criptografia/criptografia/index.php/1-panorama-general/11-concepto-decriptografia}}
+ }
+
+@misc{abs,
+   author = {Cooley J., Taylor C. y  Peacock A.},
+   title = "ABS: the apportioned backup system.",
+   year = "2004",
+    howpublished = { MIT Laboratory for Computer}
+ }
+
+@misc{flud,
+   author = {s/a},
+   title = "Flud Backup",
+   year = "2011",
+   note = {\url{ http://flud.org/wiki/Flud_Backup.}}
+ }
+
+ @book{sigops,
+  author    = {Cox L., Murray C. y Noble B.},
+  title     = {SIGOPS Oper. Syst.},
+  publisher = {Pastiche: making backup cheap and easy},
+  pages     = {36:285{298},
+  year      = {2002},
+}
+
+ @book{tahoe,
+  author    = {Wilcox-O´Hearn Z., Hopwood D. y Wilcox N.},
+  title     = {Tahoe: The least-authority},
+  publisher = {In Proceedings of the 4th ACM},
+  pages     = {21-26},
+  year      = {2008},
+}
+
+@book{donceur,
+   author = {Donceur J. R., Adya A., Bolosky W. J., Simon D. y Theimer M.},
+   title = {Reclaiming space from duplicate files in a serverless
+distributed file system.},
+    publisher = {ICDCS},
+    pages = {617-624},
+   year = {2002}
+ }
+
 @misc{cripto,
-   author = {Aguillón Martínez Erika},
+   author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
    title = "Fundamentos de Criptografía.",
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
@@ -25,7 +86,7 @@
  }
 
 @misc{servicios,
-   author = {Aguillón Martínez Erika},
+   author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
    title = "Fundamentos de Criptografía.",
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
@@ -41,7 +102,7 @@
  }
 
 @misc{ataques,
-   author = {Aguillón Martínez Erika},
+   author = {Erika Aguillón Martínez y M.C. Ma. Jaquelina López Barrientos},
    title = "Fundamentos de Seguridad Informática.",
    year = "2012",
     howpublished = {Universidad Nacional Autónoma de México},
