--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -119,6 +119,7 @@
 \mainmatter
 \include{archivosTex/introduccion}
 \include{archivosTex/preliminares}
+\include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
 %\include{archivosTex/propuesta}
 %\include{archivosTex/analisisydiseno}
