Req con tabla ok

--- a/TT-2016-B045/archivosTex/requerimientos.tex
+++ b/TT-2016-B045/archivosTex/requerimientos.tex
@@ -2,9 +2,9 @@
 
 \section{Requerimientos Funcionales. }
 
- \begin{table}[htb]
+\begin{table}[htb]
 \centering
-\begin{tabularx}{10cm}{|c|5|c|15|}
+\begin{tabular}{| p{2.5cm} |  p{13.5cm} |}
 \hline
 \multicolumn{2}{|c|}{Servidor de Llaves} \\ \hline
 ID & Descripción \\
